LIST OF CHANGES
---------------

release 6.11.0
 - iseq_heron_product_metrics table:
     set index on the id_run column,
     add pp_name and pp_version columns to capture info
     about the pipeline, which generated the data

release 6.10.0
 - add id_run column to the iseq_heron_product_metrics table
 - to allow for deletion of iseq_product_metrica rows, drop
   the foreign key constraint on the id_iseq_product column in
   the iseq_heron_product_metrics table, keep the relation
   definition in the DBIx class
 - update the DBIx class for the cgap_heron table
 
release 6.9.0
 - ml warehouse LIMS drivers - define additional delegated
   to sample objects methods 
 - DBIx class for a new iseq_heron_product_metrics table
 - DBIx classes updates for latest changes in ml warehouse database
 
release 6.8.0
 - capture latest changes/additions in ml warehouse database

release 6.7.0
 - PSD added  pac_bio_run_name field to pac_bio_run table to support
   runs being created in traction as well as SequenceScape LIMs
 - iseq_product_metrics table - a new column to store the outcome
   of product uqc
 - iseq_external_product_metrics - a new column to store product
   destination
 - iseq_run_lane_metrics table - added columns to store per-lane
   Illumina InterOp data

release 6.6.0
 - add instrument_external_name column to the iseq_run_lane_metrics
   table

release 6.5.0
 - more detailed comments for some columns.
 - 'annotation' column reduced to 15 chars since it's not free text
 - added columns for whole genome yield and end of phase2 analysis
   date
 - fixed spelling in one of the columns, ie changed column name
   from archive_conformation_date to archive_confirmation_date

release 6.4.0
 - iseq_external_product_component table redesign to allow for
   rows on iseq_product_metrics table to be deleted and recreated
   without making data in the linking table invalid
 - yield column in the iseq_external_product_component table changed