@@ -1,0 +1,347 @@
+
+package WTSI::DNAP::Warehouse::Schema::Result::IseqProductAmpliconstat;
+
+# Created by DBIx::Class::Schema::Loader
+# DO NOT MODIFY THE FIRST PART OF THIS FILE
+
+=head1 NAME
+
+WTSI::DNAP::Warehouse::Schema::Result::IseqProductAmpliconstat
+
+=head1 DESCRIPTION
+
+Some of per sample per amplicon metrics generated by samtools ampliconstats
+
+=cut
+
+use strict;
+use warnings;
+
+use Moose;
+use MooseX::NonMoose;
+use MooseX::MarkAsMethods autoclean => 1;
+extends 'DBIx::Class::Core';
+
+=head1 COMPONENTS LOADED
+
+=over 4
+
+=item * L<DBIx::Class::InflateColumn::DateTime>
+
+=back
+
+=cut
+
+__PACKAGE__->load_components('InflateColumn::DateTime');
+
+=head1 TABLE: C<iseq_product_ampliconstats>
+
+=cut
+
+__PACKAGE__->table('iseq_product_ampliconstats');
+
+=head1 ACCESSORS
+
+=head2 id_iseq_pr_astats_tmp
+
+  data_type: 'bigint'
+  extra: {unsigned => 1}
+  is_auto_increment: 1
+  is_nullable: 0
+
+Internal to this database id, value can change
+
+=head2 created
+
+  data_type: 'datetime'
+  datetime_undef_if_invalid: 1
+  default_value: 'CURRENT_TIMESTAMP'
+  is_nullable: 1
+
+Datetime this record was created
+
+=head2 last_changed
+
+  data_type: 'datetime'
+  datetime_undef_if_invalid: 1
+  default_value: 'CURRENT_TIMESTAMP'
+  is_nullable: 1
+
+Datetime this record was created or changed
+
+=head2 id_iseq_product
+
+  data_type: 'char'
+  is_foreign_key: 1
+  is_nullable: 0
+  size: 64
+
+Product id, a foreign key into iseq_product_metrics table
+
+=head2 primer_panel
+
+  data_type: 'varchar'
+  is_nullable: 0
+  size: 255
+
+A string uniquely identifying the primer panel
+
+=head2 primer_panel_num_amplicons
+
+  data_type: 'smallint'
+  extra: {unsigned => 1}
+  is_nullable: 0
+
+Total number of amplicons in the primer panel
+
+=head2 amplicon_index
+
+  data_type: 'smallint'
+  extra: {unsigned => 1}
+  is_nullable: 0
+
+Amplicon index (position) in the primer panel, from 1 to the value of primer_panel_num_amplicons
+
+=head2 pp_name
+
+  data_type: 'varchar'
+  is_nullable: 0
+  size: 40
+
+Name of the portable pipeline that generated the data
+
+=head2 pp_version
+
+  data_type: 'varchar'
+  is_nullable: 1
+  size: 40
+
+Version of the portable pipeline and/or samtools that generated the data
+
+=head2 metric_fpcov_1
+
+  data_type: 'decimal'
+  is_nullable: 1
+  size: [5,2]
+
+Coverage percent at depth 1
+
+=head2 metric_fpcov_10
+
+  data_type: 'decimal'
+  is_nullable: 1
+  size: [5,2]
+
+Coverage percent at depth 10
+
+=head2 metric_fpcov_20
+
+  data_type: 'decimal'
+  is_nullable: 1
+  size: [5,2]
+
+Coverage percent at depth 20
+
+=head2 metric_fpcov_100
+
+  data_type: 'decimal'
+  is_nullable: 1
+  size: [5,2]
+
+Coverage percent at depth 100
+
+=head2 metric_freads
+
+  data_type: 'integer'
+  extra: {unsigned => 1}
+  is_nullable: 1
+
+Number of aligned filtered reads
+
+=cut
+
+__PACKAGE__->add_columns(
+  'id_iseq_pr_astats_tmp',
+  {
+    data_type => 'bigint',
+    extra => { unsigned => 1 },
+    is_auto_increment => 1,
+    is_nullable => 0,
+  },
+  'created',
+  {
+    data_type => 'datetime',
+    datetime_undef_if_invalid => 1,
+    default_value => 'CURRENT_TIMESTAMP',
+    is_nullable => 1,
+  },
+  'last_changed',
+  {
+    data_type => 'datetime',
+    datetime_undef_if_invalid => 1,
+    default_value => 'CURRENT_TIMESTAMP',
+    is_nullable => 1,
+  },
+  'id_iseq_product',
+  { data_type => 'char', is_foreign_key => 1, is_nullable => 0, size => 64 },
+  'primer_panel',
+  { data_type => 'varchar', is_nullable => 0, size => 255 },
+  'primer_panel_num_amplicons',
+  { data_type => 'smallint', extra => { unsigned => 1 }, is_nullable => 0 },
+  'amplicon_index',
+  { data_type => 'smallint', extra => { unsigned => 1 }, is_nullable => 0 },
+  'pp_name',
+  { data_type => 'varchar', is_nullable => 0, size => 40 },
+  'pp_version',
+  { data_type => 'varchar', is_nullable => 1, size => 40 },
+  'metric_fpcov_1',
+  { data_type => 'decimal', is_nullable => 1, size => [5, 2] },
+  'metric_fpcov_10',
+  { data_type => 'decimal', is_nullable => 1, size => [5, 2] },
+  'metric_fpcov_20',
+  { data_type => 'decimal', is_nullable => 1, size => [5, 2] },
+  'metric_fpcov_100',
+  { data_type => 'decimal', is_nullable => 1, size => [5, 2] },
+  'metric_freads',
+  { data_type => 'integer', extra => { unsigned => 1 }, is_nullable => 1 },
+);
+
+=head1 PRIMARY KEY
+
+=over 4
+
+=item * L</id_iseq_pr_astats_tmp>
+
+=back
+
+=cut
+
+__PACKAGE__->set_primary_key('id_iseq_pr_astats_tmp');
+
+=head1 UNIQUE CONSTRAINTS
+
+=head2 C<iseq_hrm_digest_unq>
+
+=over 4
+
+=item * L</id_iseq_product>
+
+=item * L</primer_panel>
+
+=item * L</amplicon_index>
+
+=back
+
+=cut
+
+__PACKAGE__->add_unique_constraint(
+  'iseq_hrm_digest_unq',
+  ['id_iseq_product', 'primer_panel', 'amplicon_index'],
+);
+
+=head1 RELATIONS
+
+=head2 iseq_product
+
+Type: belongs_to
+
+Related object: L<WTSI::DNAP::Warehouse::Schema::Result::IseqProductMetric>
+
+=cut
+
+__PACKAGE__->belongs_to(
+  'iseq_product',
+  'WTSI::DNAP::Warehouse::Schema::Result::IseqProductMetric',
+  { id_iseq_product => 'id_iseq_product' },
+  { is_deferrable => 1, on_delete => 'NO ACTION', on_update => 'NO ACTION' },
+);
+
+
+# Created by DBIx::Class::Schema::Loader v0.07049 @ 2020-09-29 13:29:47
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:BU6yKQbGElrb3nXbK9ZqIA
+
+our $VERSION = '0';
+
+=head1 RELATIONS
+
+=head2 iseq_heron_product_metric
+
+Type: belongs_to
+
+Related object: L<WTSI::DNAP::Warehouse::Schema::Result::IseqHeronProductMetric>
+
+This relationship is created for convenience. Products in this table might not
+necessary be present in the iseq_heron_product_metrics table.
+
+=cut
+
+__PACKAGE__->belongs_to(
+  'iseq_heron_product_metric',
+  'WTSI::DNAP::Warehouse::Schema::Result::IseqProductMetric',
+  { id_iseq_product => 'id_iseq_product' },
+  { is_deferrable => 1, on_delete => 'NO ACTION', on_update => 'NO ACTION' },
+);
+
+__PACKAGE__->meta->make_immutable;
+1;
+
+=head1 SYNOPSIS
+
+=head1 DESCRIPTION
+
+Result class definition in DBIx binding for the multi-lims warehouse database.
+
+=head1 DIAGNOSTICS
+
+=head1 CONFIGURATION AND ENVIRONMENT
+
+=head1 SUBROUTINES/METHODS
+
+=head1 DEPENDENCIES
+
+=over
+
+=item strict
+
+=item warnings
+
+=item Moose
+
+=item MooseX::NonMoose
+
+=item MooseX::MarkAsMethods
+
+=item DBIx::Class::Core
+
+=item DBIx::Class::InflateColumn::DateTime
+
+=back
+
+=head1 INCOMPATIBILITIES
+
+=head1 BUGS AND LIMITATIONS
+
+=head1 AUTHOR
+
+Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
+
+=head1 LICENSE AND COPYRIGHT
+
+Copyright (C) 2020 Genome Research Ltd.
+
+This file is part of the ml_warehouse package L<https://github.com/wtsi-npg/ml_warehouse>.
+
+NPG is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+=cut
