@@ -1,0 +1,36 @@
+CREATE TABLE `iseq_product_ampliconstats` (
+  `id_iseq_pr_astats_tmp` BIGINT UNSIGNED NOT NULL AUTO_INCREMENT \
+    COMMENT 'Internal to this database id, value can change',
+  `created` DATETIME DEFAULT CURRENT_TIMESTAMP COMMENT \
+    'Datetime this record was created',
+  `last_changed` DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP \
+    COMMENT 'Datetime this record was created or changed',
+  `id_iseq_product` CHAR(64) NOT NULL COMMENT \
+    'Product id, a foreign key into iseq_product_metrics table',
+  `primer_panel` VARCHAR(255) NOT NULL COMMENT \
+    'A string uniquely identifying the primer panel',
+  `primer_panel_num_amplicons` SMALLINT UNSIGNED NOT NULL COMMENT \
+    'Total number of amplicons in the primer panel',
+  `amplicon_index` SMALLINT UNSIGNED NOT NULL COMMENT
+    'Amplicon index (position) in the primer panel, from 1 to the value of primer_panel_num_amplicons',
+  `pp_name` varchar(40) NOT NULL COMMENT
+    'Name of the portable pipeline that generated the data',
+  `pp_version` varchar(40) DEFAULT NULL COMMENT
+    'Version of the portable pipeline and/or samtools that generated the data',
+  `metric_FPCOV_1`   DECIMAL(5,2) DEFAULT NULL COMMENT \
+    'Coverage percent at depth 1',
+  `metric_FPCOV_10`  DECIMAL(5,2) DEFAULT NULL COMMENT \
+    'Coverage percent at depth 10',
+  `metric_FPCOV_20`  DECIMAL(5,2) DEFAULT NULL COMMENT \
+    'Coverage percent at depth 20',
+  `metric_FPCOV_100` DECIMAL(5,2) DEFAULT NULL COMMENT \
+    'Coverage percent at depth 100',
+  `metric_FREADS` INT UNSIGNED DEFAULT NULL COMMENT \
+    'Number of aligned filtered reads',
+  PRIMARY KEY (`id_iseq_pr_astats_tmp`),
+  KEY `iseq_pastats_amplicon` (`primer_panel_num_amplicons`, `amplicon_index`),
+  CONSTRAINT `iseq_pastats_prm_fk` FOREIGN KEY (`id_iseq_product`) \
+    REFERENCES `iseq_product_metrics` (`id_iseq_product`) ON DELETE NO ACTION ON UPDATE NO ACTION,
+  UNIQUE KEY `iseq_hrm_digest_unq`(`id_iseq_product`, `primer_panel`, `amplicon_index`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci \
+  COMMENT='Some of per sample per amplicon metrics generated by samtools ampliconstats';
