@@ -1,6 +1,10 @@
 LIST OF CHANGES
 ---------------
 
+ - a new iseq_product_ampliconstats table to store per sample
+   per amplicon statistics that is generated by 'samtools
+   ampliconstats'
+
 release 6.11.0
  - iseq_heron_product_metrics table:
      set index on the id_run column,
